This fixes the problem with buttons and the jumping issue with the table of content

--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -218,9 +218,9 @@ a:active {
 }
 
 a.nav:before {
-  height: 5px;
+  height: 40px;
   width: 100%;
-  background: white;
+  background: rgba(0,0,0,.0);
   position: absolute;
   content: "";
   top: -6px;
